--- a/src/gui/clasesGui/frmEmpleado.form
+++ b/src/gui/clasesGui/frmEmpleado.form
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.clasesGui.frmMaquila">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.clasesGui.frmEmpleado">
   <grid id="27dc6" binding="jpaPrincipal" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="25" left="20" bottom="25" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="776" height="604"/>
+      <xy x="20" y="20" width="599" height="480"/>
     </constraints>
     <properties>
       <background color="-8600399"/>
-      <foreground color="-6512998"/>
     </properties>
-    <border type="none">
-      <title-color color="-15986606"/>
-    </border>
+    <border type="none"/>
     <children>
-      <grid id="7a163" binding="jpaTitulo" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ba9f0" binding="jpaTitulo" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -23,19 +20,18 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="53ed9" class="javax.swing.JLabel" binding="lblTitulo">
+          <component id="d625c" class="javax.swing.JLabel" binding="lblTitulo">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <enabled value="true"/>
-              <font name="Bernard MT Condensed" size="24"/>
-              <text value="MAQUILA TEXTIL"/>
+              <font name="Bernard MT Condensed" size="24" style="1"/>
+              <text value="Empleados"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="1c4e5" binding="jpaContenido" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="659d7" binding="jpaContenido" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -45,7 +41,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="77759" class="javax.swing.JLabel" binding="lblCodigo">
+          <component id="2181b" class="javax.swing.JLabel" binding="lblCodigo">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -53,7 +49,7 @@
               <text value="Codigo:"/>
             </properties>
           </component>
-          <component id="b8805" class="javax.swing.JTextField" binding="txtCodigo">
+          <component id="5fb7e" class="javax.swing.JTextField" binding="txtCodigo">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -61,7 +57,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="c56f6" class="javax.swing.JLabel" binding="lblNombre">
+          <component id="457" class="javax.swing.JLabel" binding="lblNombre">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -69,24 +65,21 @@
               <text value="Nombre:"/>
             </properties>
           </component>
-          <component id="ed6ea" class="javax.swing.JTextField" binding="txtNombre">
+          <component id="ff711" class="javax.swing.JComboBox" binding="cboNombre">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
-          <component id="b43be" class="javax.swing.JLabel" binding="lblDireccion">
+          <component id="87631" class="javax.swing.JLabel" binding="lblDNI">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font/>
-              <text value="Direccion:"/>
+              <text value="DNI:"/>
             </properties>
           </component>
-          <component id="6fd5d" class="javax.swing.JTextField" binding="txtDireccion">
+          <component id="ecbc4" class="javax.swing.JTextField" binding="txtDNI">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -94,15 +87,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="7d62a" class="javax.swing.JLabel" binding="lblFechaInicio">
+          <component id="e0f16" class="javax.swing.JLabel" binding="lblPuesto">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Fecha de Inicio:"/>
+              <text value="Puesto:"/>
             </properties>
           </component>
-          <component id="23465" class="javax.swing.JTextField" binding="txtFechaInicio">
+          <component id="43742" class="javax.swing.JTextField" binding="txtPuesto">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -110,15 +103,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="6cf92" class="javax.swing.JLabel" binding="lblTelefono">
+          <component id="76109" class="javax.swing.JLabel" binding="lblSueldo">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Telefono:"/>
+              <text value="Sueldo:"/>
             </properties>
           </component>
-          <component id="8ff6e" class="javax.swing.JTextField" binding="txtTelefono">
+          <component id="92d4" class="javax.swing.JTextField" binding="txtSueldo">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -126,15 +119,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="dcffa" class="javax.swing.JLabel" binding="lblCorreo">
+          <component id="2dc2a" class="javax.swing.JLabel" binding="lblFechaIngreso">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Correo:"/>
+              <text value="Fecha de Ingreso:"/>
             </properties>
           </component>
-          <component id="beb0a" class="javax.swing.JTextField" binding="txtCorreo">
+          <component id="d78af" class="javax.swing.JTextField" binding="txtFechaIngreso">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -142,15 +135,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="765f" class="javax.swing.JLabel" binding="lblCantEmpleados">
+          <component id="26613" class="javax.swing.JLabel" binding="lblNivelAcademico">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Cantidad de Empleados:"/>
+              <text value="Nivvel Academico:"/>
             </properties>
           </component>
-          <component id="507e9" class="javax.swing.JTextField" binding="txtCantEmpleados">
+          <component id="9493e" class="javax.swing.JTextField" binding="txtNivelAcademico">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -158,15 +151,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="af17b" class="javax.swing.JLabel" binding="lblCombo">
+          <component id="893c5" class="javax.swing.JLabel" binding="lblEmpleado">
             <constraints>
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Maquila:"/>
+              <text value="Empleado:"/>
             </properties>
           </component>
-          <component id="9c757" class="javax.swing.JComboBox" binding="cboComboMaquila">
+          <component id="92004" class="javax.swing.JComboBox" binding="cboComboEmpleado">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -174,7 +167,7 @@
           </component>
         </children>
       </grid>
-      <grid id="9daa2" binding="jpaBotones" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="27902" binding="jpaBotones" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -184,7 +177,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="d46fd" class="javax.swing.JButton" binding="btnRegistrar">
+          <component id="472dd" class="javax.swing.JButton" binding="btnRegistrar">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -192,7 +185,7 @@
               <text value="Registrar"/>
             </properties>
           </component>
-          <component id="66e0d" class="javax.swing.JButton" binding="btnActualizar">
+          <component id="80f8e" class="javax.swing.JButton" binding="btnActualizar">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -200,7 +193,7 @@
               <text value="Actualizar"/>
             </properties>
           </component>
-          <component id="b48fd" class="javax.swing.JButton" binding="btnEliminar">
+          <component id="725c0" class="javax.swing.JButton" binding="btnEliminar">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -208,7 +201,7 @@
               <text value="Eliminar"/>
             </properties>
           </component>
-          <component id="4368b" class="javax.swing.JButton" binding="btnBuscar">
+          <component id="5051c" class="javax.swing.JButton" binding="btnBuscar">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -216,7 +209,7 @@
               <text value="Buscar"/>
             </properties>
           </component>
-          <component id="349f9" class="javax.swing.JButton" binding="btnListar">
+          <component id="6e4ca" class="javax.swing.JButton" binding="btnListar">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -224,7 +217,7 @@
               <text value="Listar"/>
             </properties>
           </component>
-          <component id="a575f" class="javax.swing.JButton" binding="btnLeerCombo">
+          <component id="9ead0" class="javax.swing.JButton" binding="btnLeerCombo">
             <constraints>
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -234,7 +227,7 @@
           </component>
         </children>
       </grid>
-      <grid id="336a1" binding="jpaDatos" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d0c3b" binding="jpaDatos" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -244,14 +237,14 @@
         </properties>
         <border type="none"/>
         <children>
-          <scrollpane id="539b" binding="sclPanDatos">
+          <scrollpane id="91f8" binding="sclPanDatos">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="ec90" class="javax.swing.JTable" binding="tblDatos">
+              <component id="e4cf2" class="javax.swing.JTable" binding="tblDatos">
                 <constraints/>
                 <properties/>
               </component>
