--- a/src/gui/clasesGui/frmPersona.form
+++ b/src/gui/clasesGui/frmPersona.form
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.clasesGui.frmMaquila">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.clasesGui.frmPersona">
   <grid id="27dc6" binding="jpaPrincipal" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="25" left="20" bottom="25" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="776" height="604"/>
+      <xy x="20" y="20" width="599" height="480"/>
     </constraints>
     <properties>
       <background color="-8600399"/>
-      <foreground color="-6512998"/>
     </properties>
-    <border type="none">
-      <title-color color="-15986606"/>
-    </border>
+    <border type="none"/>
     <children>
-      <grid id="7a163" binding="jpaTitulo" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f9435" binding="jpaTitulo" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -23,19 +20,18 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="53ed9" class="javax.swing.JLabel" binding="lblTitulo">
+          <component id="43ed1" class="javax.swing.JLabel" binding="Persona">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <enabled value="true"/>
-              <font name="Bernard MT Condensed" size="24"/>
-              <text value="MAQUILA TEXTIL"/>
+              <font name="Bernard MT Condensed" size="24" style="1"/>
+              <text value="Personas"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="1c4e5" binding="jpaContenido" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2be9c" binding="jpaContenido" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -45,15 +41,15 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="77759" class="javax.swing.JLabel" binding="lblCodigo">
+          <component id="37c1f" class="javax.swing.JLabel" binding="lblDNI">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Codigo:"/>
+              <text value="DNI:"/>
             </properties>
           </component>
-          <component id="b8805" class="javax.swing.JTextField" binding="txtCodigo">
+          <component id="1bb66" class="javax.swing.JTextField" binding="txtDNI">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -61,7 +57,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="c56f6" class="javax.swing.JLabel" binding="lblNombre">
+          <component id="ec981" class="javax.swing.JLabel" binding="lblNombre">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -69,7 +65,7 @@
               <text value="Nombre:"/>
             </properties>
           </component>
-          <component id="ed6ea" class="javax.swing.JTextField" binding="txtNombre">
+          <component id="181d7" class="javax.swing.JTextField" binding="txtNombre">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -77,16 +73,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="b43be" class="javax.swing.JLabel" binding="lblDireccion">
+          <component id="33e11" class="javax.swing.JLabel" binding="lblFechaNacimiento">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font/>
-              <text value="Direccion:"/>
+              <text value="Fecha de Nacimiento:"/>
             </properties>
           </component>
-          <component id="6fd5d" class="javax.swing.JTextField" binding="txtDireccion">
+          <component id="f809a" class="javax.swing.JTextField" binding="txtFechaNacimiento">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -94,15 +89,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="7d62a" class="javax.swing.JLabel" binding="lblFechaInicio">
+          <component id="33517" class="javax.swing.JLabel" binding="lblDireccion">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Fecha de Inicio:"/>
+              <text value="Direccion:"/>
             </properties>
           </component>
-          <component id="23465" class="javax.swing.JTextField" binding="txtFechaInicio">
+          <component id="43f68" class="javax.swing.JTextField" binding="txtDireccion">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -110,7 +105,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="6cf92" class="javax.swing.JLabel" binding="lblTelefono">
+          <component id="7ba2d" class="javax.swing.JLabel" binding="lblTelefono">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -118,7 +113,7 @@
               <text value="Telefono:"/>
             </properties>
           </component>
-          <component id="8ff6e" class="javax.swing.JTextField" binding="txtTelefono">
+          <component id="6d4a1" class="javax.swing.JTextField" binding="txtTelefono">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -126,7 +121,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="dcffa" class="javax.swing.JLabel" binding="lblCorreo">
+          <component id="643d4" class="javax.swing.JLabel" binding="lblCorreo">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -134,7 +129,7 @@
               <text value="Correo:"/>
             </properties>
           </component>
-          <component id="beb0a" class="javax.swing.JTextField" binding="txtCorreo">
+          <component id="647c9" class="javax.swing.JTextField" binding="txtCorreo">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -142,15 +137,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="765f" class="javax.swing.JLabel" binding="lblCantEmpleados">
+          <component id="2c7c3" class="javax.swing.JLabel" binding="lblEdad">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Cantidad de Empleados:"/>
+              <text value="Edad:"/>
             </properties>
           </component>
-          <component id="507e9" class="javax.swing.JTextField" binding="txtCantEmpleados">
+          <component id="e7daa" class="javax.swing.JTextField" binding="txtEdad">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -158,15 +153,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="af17b" class="javax.swing.JLabel" binding="lblCombo">
+          <component id="334b8" class="javax.swing.JLabel" binding="lblPersona">
             <constraints>
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Maquila:"/>
+              <text value="Persona:"/>
             </properties>
           </component>
-          <component id="9c757" class="javax.swing.JComboBox" binding="cboComboMaquila">
+          <component id="8a902" class="javax.swing.JComboBox" binding="cboComboPersona">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -174,7 +169,7 @@
           </component>
         </children>
       </grid>
-      <grid id="9daa2" binding="jpaBotones" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="76273" binding="jpaBotones" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -184,7 +179,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="d46fd" class="javax.swing.JButton" binding="btnRegistrar">
+          <component id="6d710" class="javax.swing.JButton" binding="btnRegistrar">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -192,7 +187,7 @@
               <text value="Registrar"/>
             </properties>
           </component>
-          <component id="66e0d" class="javax.swing.JButton" binding="btnActualizar">
+          <component id="b955b" class="javax.swing.JButton" binding="btnActualizar">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -200,7 +195,7 @@
               <text value="Actualizar"/>
             </properties>
           </component>
-          <component id="b48fd" class="javax.swing.JButton" binding="btnEliminar">
+          <component id="cadf7" class="javax.swing.JButton" binding="btnEliminar">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -208,7 +203,7 @@
               <text value="Eliminar"/>
             </properties>
           </component>
-          <component id="4368b" class="javax.swing.JButton" binding="btnBuscar">
+          <component id="40cba" class="javax.swing.JButton" binding="btnBuscar">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -216,7 +211,7 @@
               <text value="Buscar"/>
             </properties>
           </component>
-          <component id="349f9" class="javax.swing.JButton" binding="btnListar">
+          <component id="b7b7" class="javax.swing.JButton" binding="btnListar">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -224,7 +219,7 @@
               <text value="Listar"/>
             </properties>
           </component>
-          <component id="a575f" class="javax.swing.JButton" binding="btnLeerCombo">
+          <component id="e3bf3" class="javax.swing.JButton" binding="btnLeerCombo">
             <constraints>
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -234,7 +229,7 @@
           </component>
         </children>
       </grid>
-      <grid id="336a1" binding="jpaDatos" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="fc3d8" binding="jpaDatos" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -244,14 +239,14 @@
         </properties>
         <border type="none"/>
         <children>
-          <scrollpane id="539b" binding="sclPanDatos">
+          <scrollpane id="d0cbd" binding="sclPanDatos">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="ec90" class="javax.swing.JTable" binding="tblDatos">
+              <component id="b6709" class="javax.swing.JTable" binding="tblDatos">
                 <constraints/>
                 <properties/>
               </component>
