--- a/src/gui/clasesGui/frmProveedor.form
+++ b/src/gui/clasesGui/frmProveedor.form
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.clasesGui.frmProduccion">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.clasesGui.frmProveedor">
   <grid id="27dc6" binding="jpaPrincipal" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="25" left="20" bottom="25" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="609" height="441"/>
+      <xy x="20" y="20" width="609" height="481"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-8600399"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="2acc5" binding="jpaTitulo" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-8600399"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="cee97" class="javax.swing.JLabel" binding="lblTitulo">
@@ -32,7 +36,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-8600399"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3df5" class="javax.swing.JLabel" binding="lblCodigo">
@@ -170,7 +176,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-8600399"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="b3807" class="javax.swing.JButton" binding="btnActualizar">
@@ -228,7 +236,9 @@
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-8600399"/>
+        </properties>
         <border type="none"/>
         <children>
           <scrollpane id="8dbb4" binding="sclPanDatos">
