--- a/src/gui/clasesGui/frmEmpleado.form
+++ b/src/gui/clasesGui/frmEmpleado.form
@@ -140,7 +140,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Nivvel Academico:"/>
+              <text value="Nivel Academico:"/>
             </properties>
           </component>
           <component id="9493e" class="javax.swing.JTextField" binding="txtNivelAcademico">
