--- a/src/gui/clasesGui/frmProduccion.form
+++ b/src/gui/clasesGui/frmProduccion.form
@@ -26,6 +26,7 @@
             </constraints>
             <properties>
               <font name="Bernard MT Condensed" size="24" style="1"/>
+              <icon value="recursos/imagenes/icono-produccion.png"/>
               <text value="Produccion"/>
             </properties>
           </component>
